--- a/Novità.html
+++ b/Novità.html
@@ -41,6 +41,11 @@
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
+	
+<p><big><big><span style="text-decoration: underline;">12 ottobre 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL GRANELLO DI POLVERE</strong></i>, la diciottesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Un minuzzolo di materia che un colpo di martello staccò da una roccia fu levato in alto dal vento, onde svolazzava qua e là, tutto gonfio di vedersi a tanta altezza, e sì leggiero da veleggiare nelle regioni dell’aria. S’incontrò nel suo vagabondare con una quantità infinita di atomi sì esili, sì attenuati (erano di quella sostanza eterea, che empie l’universo), che,  veggendoli a suo confronto più piccoli di un nano rimpetto ad un gigante, si diede a risa sgangherata, ed a sguaiate beffe, pigliando a gabbo tanti quanti gliene passassero vicino».<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 	
 
 <p><big><big><span style="text-decoration: underline;">4 ottobre 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LE DUE QUAGLIE</strong></i>, la diciassettesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
