--- a/Novità.html
+++ b/Novità.html
@@ -42,6 +42,11 @@
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
 	
+<p><big><big><span style="text-decoration: underline;">14 ottobre 2022</span></big></big></p><br><br>
+<p><big>Finora <i>Celebri Vignolesi</i> si è occupato pubblicamente (nel sito e nei social) solo di personaggi, opere, circostanze e citazioni del passato più o meno recente. Ciò non deve tuttavia far pensare a un disinteresse pregiudiziale nei riguardi del tempo presente. Ieri 13 ottobre 2022, per esempio, <i>Celebri Vignolesi</i> ha trascorso alcune ore nel laboratorio del <strong>maestro DOMENICO “PIPPO” SIMONINI</strong>. In vista del suo 70° compleanno, che cadrà il 18 ottobre, <i>Celebri Vignolesi</i> comincia da oggi a dedicare spazio alla figura, alla vita e alle opere di questo nostro illustre concittadino, valente pittore e incisore di rinomanza internazionale.<br>
+Nell’immagine qui sotto, Simonini durante una pausa dell’intervista filmata che pubblicheremo a breve.</big></p>
+<img src="img/celebri vignolesi/pippo/intervista.JPG" width="650" height="500"><br><br><br>	
+	
 <p><big><big><span style="text-decoration: underline;">12 ottobre 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL GRANELLO DI POLVERE</strong></i>, la diciottesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
 «Un minuzzolo di materia che un colpo di martello staccò da una roccia fu levato in alto dal vento, onde svolazzava qua e là, tutto gonfio di vedersi a tanta altezza, e sì leggiero da veleggiare nelle regioni dell’aria. S’incontrò nel suo vagabondare con una quantità infinita di atomi sì esili, sì attenuati (erano di quella sostanza eterea, che empie l’universo), che,  veggendoli a suo confronto più piccoli di un nano rimpetto ad un gigante, si diede a risa sgangherata, ed a sguaiate beffe, pigliando a gabbo tanti quanti gliene passassero vicino».<br>
