--- a/Celebri Vignolesi.html
+++ b/Celebri Vignolesi.html
@@ -67,13 +67,13 @@
 <td><big><big><strong><a href="Santi.html">Aldo Santi</a></strong></td>
 <td><big><big><strong><a href="Selmi.html">Francesco Selmi</a></strong></td></tr>
 <tr>
+<td><big><big><strong><a href="Pippo.html">Domenico Simonini</a></strong></td>
 <td><big><big><strong><a href="Soli1.html">Giuseppe Maria Soli</a></strong></td>
 <td><big><big><strong><a href="Soli2.html">Ivo Soli</a></strong></td>
-<td><big><big><strong><a href="Soli3.html">Giovanni Francesco Soli Muratori</a></strong></td></tr>
 <tr>
+<td><big><big><strong><a href="Soli3.html">Gian Francesco Soli Muratori</a></strong></td>
 <td><big><big><strong><a href="Tassoni.html">Giulio Tassoni</a></strong></td>
 <td><big><big><strong><a href="Tosi.html">Luca Antonio Tosi</a></strong></td>
-<td><big><big><strong><a href=""></a></strong></td></tr>
 </table></center>
  <br><br><br>
 </section>
