--- a/Pippo.html
+++ b/Pippo.html
@@ -49,13 +49,34 @@
 
 <p><big><strong><a href="https://domenicosimonini.com/">Domenico Simonini</a></strong> (ultimo accesso, 16 ottobre 2022): sito dell’Artista.</big></p><br><br><br>
 
+<h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br><br>
+<p><big><i>Celebri Vignolesi</i> pubblica un’intervista filmata di venti minuti a Domenico Simonini, nella quale egli affronta diversi temi, spaziando dalle memorie familiari alla sua formazione artistica, dal suo rapporto con Vignola e i Vignolesi al ruolo dell’artista nella società, dai suoi incontri a Milano alla nascita del sodalizio <i>Città e Campagna</i> tra pittori e scultori che hanno una concezione etica dell’arte, dal suo impegno per far conoscere gli altri artisti anche nell’ambito del <i>Salotto di L.A. Muratori</i> di Vignola alle sue prospettive per il futuro ecc. Questa intervista è stata girata due giorni fa nel laboratorio di Simonini ed è un’esclusiva di <i>Celebri Vignolesi</i>.</big><br>
+<p><big><strong><a href="Intervista.html">Domenico Simonini. Un indipendente del nostro tempo</a></strong></big></p><br><br><br>
+
+
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+
+<p><big><big><center> Ritratto fotografico della famiglia Simonini alla fine del 1953 o all’inizio del 1954:<br> Giacomo Simonini e Marta Magni con i piccoli Giuseppe (n. 1951) e Domenico.<br> L’autore dello scatto è il fratello del capofamiglia, il fotografo Giuseppe.  </center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/famiglia.jpg" width="520" height="720"></p><br>
+<p><big><big><center>Simonini a Saint-Tropez (1969).  </center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/saintropez.jpg" width="520" height="750"></p><br>
+<p><big><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.  </center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/band.jpg" width="850" height="600"></p><br>
+<p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i> (oggi in collezione privata).</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/expo.jpg" width="860" height="580"></p><br>
+<p><big><big><center>Simonini e Luciano Pavarotti nel 1990 al <i>Club Europa 92</i>, Modena, durante la personale dell’Artista.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/pavarotto.jpg" width="870" height="630"></p><br>
+<p><big><big><center>L’Artista con Raffaele De Grada junior e Maria Luisa Simone all’inizio degli anni Novanta.<br> Fonte: Archivio fotografico di Domenico Simonini.</center></big></big><br>
+	<img src="img/celebri vignolesi/Pippo/degrada.jpg" width="950" height="640"></p><br>
+<p><big><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata scattata nel 1994 o nel 1995.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/Pipposeduto.jpg" width="500" height="770"></p><br>
+<p><big><big><center>Primo piano di Simonini (2019).</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/pippopensoso.jpg" width="850" height="600"></p><br>
 <p><big><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/intervista.JPG" width="850" height="630"></p><br>
 <p><big><big><center>L’Artista nel suo studio di Vignola mentre sta lavorando al prossimo quadro, <i>Avventori ai tavolini esterni di un bar</i>.<br> Fotografia del 13 ottobre 2022.</center></big><br>
 	<img src="img/celebri vignolesi/Pippo/pippodipinge.JPG" width="850" height="660"></p><br>
-<p><big><center>L’Artista con Raffaele De Grada junior e Maria Luisa Simone all’inizio degli anni Novanta.<br> Fonte: Archivio fotografico di Domenico Simonini.</center></big><br>
-	<img src="img/celebri vignolesi/Pippo/degrada.jpg" width="950" height="640"></p><br>
+
 <p><big><center> Simonini, <i>Donna seduta</i>, olio su tela, 1969 o 1970. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pippogiovane.jpg" width="500" height="650"></p><br>
 <p><big><center> Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022.<br> Questo quadro prossimamente prenderà la via di una collezione privata.</center></big></p>
