--- a/Intervista.html
+++ b/Intervista.html
@@ -31,19 +31,42 @@
 
 <h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br><br><br>
 
-<p><big><big><strong>PARTE PRIMA: DOMENICO SIMONINI AL LAVORO</strong></big></big></p><br><br>
+<p><big>Intervista del 13 ottobre 2022 presenta e realizzata da Sara Scaglioni - <i>Celebri Vignolesi</i></big></p><br><br>
 
-<p><big><big><strong>PARTE SECONDA: LA VITA</strong></big></big></p><br><br>
+<p><big><big><center><strong>PARTE PRIMA: DOMENICO SIMONINI AL LAVORO</strong></center></big></big></p><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/disegno e titolo.mp4" type="video/mp4">
+</center></video></p><br><br><br>
 
-<p><big><big><strong>PARTE TERZA: TRA BOLOGNA E MILANO</strong></big></big></p><br><br>
+<p><big><big><center><strong>PARTE SECONDA: LA VITA</strong></center></big></big></p><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/vita.mp4" type="video/mp4">
+</center></video></p><br><br><br>
 
-<p><big><big><strong>PARTE QUARTA: RAFFAELE DE GRADA</strong></big></big></p><br><br>
+<p><big><big><center><strong>PARTE TERZA: TRA BOLOGNA E MILANO</strong></center></big></big></p><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/trabolognaemilano.mp4" type="video/mp4">
+</center></video></p><br><br><br>
 
-<p><big><big><strong>PARTE QUINTA: IL RUOLO DEL PITTORE</strong></big></big></p><br><br>
+<p><big><big><center><strong>PARTE QUARTA: RAFFAELE DE GRADA</strong></center></big></big></p><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/degrada.mp4" type="video/mp4">
+</center></video></p><br><br><br>
 
-<p><big><big><strong>PARTE SESTA: VIGNOLA</strong></big></big></p><br><br>
+<p><big><big><center><strong>PARTE QUINTA: IL RUOLO DEL PITTORE</strong></center></big></big></p><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/ruolopittore.mp4" type="video/mp4">
+</center></video></p><br><br><br>
 
-<p><big><big><strong>PARTE SETTIMA: E ORA?</strong></big></big></p><br><br><br>
+<p><big><big><center><strong>PARTE SESTA: VIGNOLA</strong></center></big></big></p><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/Vignola.mp4" type="video/mp4">
+</center></video></p><br><br><br>
+
+<p><big><big><center><strong>PARTE SETTIMA: E ORA?</strong></center></big></big></p><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/Eora.mp4" type="video/mp4">
+</center></video></p><br><br><br>
 
 
 
