--- a/Intervista.html
+++ b/Intervista.html
@@ -29,7 +29,7 @@
 <section>
 <p><big><strong><a href="Pippo.html">Profilo di Simonini</a></strong></big></p><br><br><br>
 
-<h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br><br><br>
+<h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br>
 
 <p><big>Intervista del 13 ottobre 2022 presenta e realizzata da Sara Scaglioni - <i>Celebri Vignolesi</i></big></p><br><br>
 
