--- a/Muratori.html
+++ b/Muratori.html
@@ -80,9 +80,9 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori incisione.jpg" width="400" height="680"><br><br><br>
 <p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="470" height="660"><br><br><br>
-<p><center><big>Casa natale del grande storico ed erudito situata fra le odierne Vie Selmi e Muratori (è Monumento Nazionale dal 1940).</big></center></p>
+<p><center><big>Casa natale del grande storico ed erudito situata fra le odierne Vie Selmi e Muratori (è Monumento Nazionale dal 1940) ... dal 1940).<br> Questa fotografia è stata scattata il 15 febbraio 2020, in occasione della riapertura al pubblico dello studiolo (vedi qui sotto).</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"><br><br>
-<p><center><big>Particolare dello studiolo (o camera genetliaca) del celebre personaggio.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.</big></center></p>
+<p><center><big>Particolare dello studiolo (o camera genetliaca) del celebre personaggio.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.<br> Anche questa fotografia risale al 15 febbraio 2020.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="375" height="640"><br><br>
 <p><center><big>Lapide apposta sul muro esterno della prima scuola di Muratori (oggi canonica), a Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidecanonica2.jpg" width="730" height="580"><br><br><br>
