--- a/Soli3.html
+++ b/Soli3.html
@@ -43,7 +43,7 @@ Autore di diverse pubblicazioni, nel 1756 diede alle stampe la sua opera più ce
 
 Lasciò inediti numerosi lavori: ne sono conservati i manoscritti presso la Biblioteca Estense Universitaria (tra di essi, spicca particolarmente una <i>Storia di Modena</i> che ripercorre le vicende cittadine dalle origini al 1742).<br> 
 
-Soli Muratori si spense a Modena il 29 settembre 1769. In ossequio alle sue volontà, la salma venne inumata in Santa Maria della Pomposa. Le spoglie andarono poi disperse e oggi non conosciamo più la posizione della sepoltura.</big></p><br><br><br>
+Soli Muratori si spense a Modena il 29 settembre 1769. In ossequio alle sue volontà, la salma venne inumata in Santa Maria della Pomposa. Le spoglie andarono disperse nel 1777, quando la chiesa venne trasformata in un magazzino.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <center><big><big>Il primo dei tre tomi delle <i>Dissertazioni sopra le antichità italiane</i><br> (In Milano [<i>recte</i>: Venezia], A spese di Giambatista Pasquali, 1751) di Muratori, a cura del nipote. Fonte: google.com</big></big></center><br>
 <center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/Dissertazione.jpg" width="450" height="650"></center><br><br><br>
