--- a/ottobre.html
+++ b/ottobre.html
@@ -101,6 +101,20 @@ Nell’immagine qui sotto, la prima di copertina di <i>Storia cronologica di Vig
 <img src="img/celebri vignolesi/Tosi/tosi.jpg" width="380" height="580"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Luca Antonio Tosi?<br>Allora, visita il suo <a href="Tosi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 <p><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
+
+<p><strong>29 ottobre 1897</strong>: nacque a Vignola <strong>UMBERTO COSTANZINI</strong>, ingegnere e architetto.<br><br>  
+Questo personaggio partecipò alla Prima Guerra Mondiale come ufficiale di complemento nel Corpo degli Alpini. Dopo aver frequentato la Scuola d’Applicazione per Ingegneri di Bologna ed essersi laureato il 27 dicembre 1924, egli diventò subito nella stessa città ingegnere capo dell’Ufficio Tecnico della Casa del Fascio.<br>
+
+Durante la sua carriera, Costanzini fu progettista e direttore dei lavori a Bologna, a Ravenna, nel Modenese, nel Cosentino e in altre zone d’Italia. Recano l’impronta del Vignolese, fra l’altro, svariate strutture sportive di notevole rilevanza: lo Stadio Littoriale – oggi Stadio Dall’Ara – di Bologna, inaugurato due giorni dopo il suo 29° compleanno (da Mussolini in persona), un impianto che può essere considerato il primo stadio propriamente detto in Italia e che per diverso tempo funse da modello per la costruzione di tutti gli stadi della Penisola, oltre a essere uno degli impianti calcistici più grandi presenti all’epoca nell’intera Europa; il campo polisportivo dell’ippodromo di Ravenna (1928); l’ippodromo Arcoveggio di Bologna (1929); il nuovo Stadio Comunale – oggi Stadio Braglia – di Modena (1936-1938).<br>
+
+Costanzini, che rimase sempre legatissimo al paese natale, avanzò propri progetti per l’edificazione del nuovo mercato coperto cittadino (oggi conosciuto come «ex mercato»), ma tra le soluzioni in essi contenute giunse alla realizzazione soltanto la tettoia (1931), la quale fu poi ricostruita dopo i bombardamenti alleati dell’aprile 1945. A Vignola, inoltre, egli venne nominato presidente della locale Cassa di Risparmio (1940), incarico che ricoprì per cinque anni.<br>
+Costanzini morì a Bologna il 2 aprile 1968.<br><br>
+ 
+
+Nell’immagine qui sotto, Costanzini nel suo studio (1933). Fonte: Giuseppe Leonardi, <i>L’Alpino</i>, in Aa.Vv., <i>36a Festa dei Ciliegi in Fiore (Vignola, 2 Aprile - 8 Maggio 2005)</i>, Vignola, Centro Studi Vignola, 2005, pp. 43-47: 44.</big></p><br><br>
+<img src="img/celebri vignolesi/Costanzini/costanzini.jpg" width="550" height="620"><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Umberto Costanzini?<br>Allora, visita il suo <a href="Costanzini.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
