--- a/Celebri Vignolesi.html
+++ b/Celebri Vignolesi.html
@@ -44,36 +44,39 @@
 <tr>
 <td><big><big><strong><a href="Bondioli.html">Luigi Bondioli</a></strong></td>
 <td><big><big><strong><a href="Cantelli.html">Giacomo Cantelli</a></strong></td>
-<td><big><big><strong><a href="Fontana.html">Giovanni Fontana</a></strong></td> </tr>
+<td><big><big><strong><a href="Costanzini.html">Umberto Costanzini</a></strong></td></tr>
 <tr>
+<td><big><big><strong><a href="Fontana.html">Giovanni Fontana</a></strong></td> 
 <td><big><big><strong><a href="Garavini.html">Carlo Garavini</a></strong></td>
-<td><big><big><strong><a href="Gazzotti.html">Luigi Gazzotti</a></strong></td>
+<td><big><big><strong><a href="Gazzotti.html">Luigi Gazzotti</a></strong></td></tr>
+<tr>
 <td><big><big><strong><a href="Minghelli.html">Pietro Minghelli</a></strong></td>
-</tr>
-<tr>
 <td><big><big><strong><a href="Muratori.html">Lodovico Antonio Muratori</i></a></strong></td>
-<td><big><big><strong><a href="Neri1.html">Attilio Neri</a></strong></td>
-<td><big><big><strong><a href="Neri2.html">Nèttore Neri</a></strong></td></tr>
+<td><big><big><strong><a href="Neri1.html">Attilio Neri</a></strong></td></tr>
 <tr>
+<td><big><big><strong><a href="Neri2.html">Nèttore Neri</a></strong></td>
 <td><big><big><strong><a href="Paradisi.html">Agostino Paradisi <i>il Giovane</i></a></strong></td>
-<td><big><big><strong><a href="Pellegrini.html">Mario Pellegrini</a></strong></td>
-<td><big><big><strong><a href="Plessi1.html">Alessandro Plessi</a></strong></td></tr>
+<td><big><big><strong><a href="Pellegrini.html">Mario Pellegrini</a></strong></td></tr>
 <tr>
+<td><big><big><strong><a href="Plessi1.html">Alessandro Plessi</a></strong></td>
 <td><big><big><strong><a href="Plessi2.html">Giuseppe Antonio Plessi</a></strong></td>
-<td><big><big><strong><a href="Redorici Roffi.html">Augusta Redorici Roffi</a></strong></td>
-<td><big><big><strong><a href="Rodolfi.html">Giovanni Rodolfi</a></strong></td></tr>
+<td><big><big><strong><a href="Redorici Roffi.html">Augusta Redorici Roffi</a></strong></td></tr>
 <tr>
+<td><big><big><strong><a href="Rodolfi.html">Giovanni Rodolfi</a></strong></td>
 <td><big><big><strong><a href="Roli.html">Ugo Roli</a></strong></td>
-<td><big><big><strong><a href="Santi.html">Aldo Santi</a></strong></td>
-<td><big><big><strong><a href="Selmi.html">Francesco Selmi</a></strong></td></tr>
+<td><big><big><strong><a href="Santi.html">Aldo Santi</a></strong></td></tr>
 <tr>
+<td><big><big><strong><a href="Selmi.html">Francesco Selmi</a></strong></td>
 <td><big><big><strong><a href="Pippo.html">Domenico Simonini</a></strong></td>
-<td><big><big><strong><a href="Soli1.html">Giuseppe Maria Soli</a></strong></td>
-<td><big><big><strong><a href="Soli2.html">Ivo Soli</a></strong></td>
+<td><big><big><strong><a href="Soli1.html">Giuseppe Maria Soli</a></strong></td></tr>
 <tr>
-<td><big><big><strong><a href="Soli3.html">Giovanni Francesco Soli Muratori</a></strong></td>
-<td><big><big><strong><a href="Tassoni.html">Giulio Tassoni</a></strong></td>
+<td><big><big><strong><a href="Soli2.html">Ivo Soli</a></strong></td>
+<td><big><big><strong><a href="Soli3.html">Gian Francesco Soli Muratori</a></strong></td>
+<td><big><big><strong><a href="Tassoni.html">Giulio Tassoni</a></strong></td></tr>
+<tr>
 <td><big><big><strong><a href="Tosi.html">Luca Antonio Tosi</a></strong></td>
+<td><big><big><strong><a href="Tosi.html"></a></strong></td>
+<td><big><big><strong><a href="Tosi.html"></a></strong></td>
 </table></center>
  <br><br><br>
 </section>
