--- a/ottobre.html
+++ b/ottobre.html
@@ -97,12 +97,11 @@ Venuto al mondo in una famiglia ricca e stimata, questo personaggio svolse la pr
 Nemico del regime austroestense già negli anni giovanili, s’impegnò per arrivare all’unificazione nazionale sotto la dinastia sabauda e, poi, per cementare il nuovo Regno e “fare gli Italiani”.<br>
 Diede alle stampe scritti di carattere medico e una <i>Storia cronologica di Vignola ad uso delle scuole</i> (1872).<br>  
 Tosi morì nel suo paese natale il 2 dicembre 1876. Fu sepolto nell’antico camposanto di Vignola, poi nella cappella Tosi Bellucci del nuovo (l’odierno) cimitero cittadino.<br><br>
-Nell’immagine qui sotto, la prima di copertina di <i>Storia cronologica di Vignola ad uso delle scuole del cav. prof. Luca Tosi Vignolese</i>, Vignola, Tipografia di Antonio Bizzarri, 1872. Fonte: google.com</big></p><br><br>
-<img src="img/celebri vignolesi/Tosi/tosi.jpg" width="380" height="580"><br><br><br>
-<p><strong><big><big><center>Vuoi saperne di più su Luca Antonio Tosi?<br>Allora, visita il suo <a href="Tosi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+​Nell’immagine qui sott​o, ​la prima di copertina di <i>Storia cronologica di Vignola ad uso delle scuole del cav. prof. Luca Tosi Vignolese</i>,​ ​Vignola, Tipografia di Antonio Bizzarri, 1872. Fonte: google.com</p><br><br>
+<img src="img/celebri vignolesi/Tosi/tosi.jpg" width="400" height="600"><br><br><br>
+<p><strong><big><center>Vuoi saperne di più su Luca Antonio Tosi?<br>Allora, visita il suo <a href="Tosi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
-
-<p><big><strong>29 ottobre 1897</strong>: nacque a Vignola <strong>UMBERTO COSTANZINI</strong>, ingegnere e architetto.<br><br>  
+<p><strong>29 ottobre 1897</strong>: nacque a Vignola <strong>UMBERTO COSTANZINI</strong>, ingegnere e architetto.<br><br>  
 Questo personaggio partecipò alla Prima Guerra Mondiale come ufficiale di complemento nel Corpo degli Alpini. Dopo aver frequentato la Scuola d’Applicazione per Ingegneri di Bologna ed essersi laureato il 27 dicembre 1924, egli diventò subito nella stessa città ingegnere capo dell’Ufficio Tecnico della Casa del Fascio.<br>
 
 Durante la sua carriera, Costanzini fu progettista e direttore dei lavori a Bologna, a Ravenna, nel Modenese, nel Cosentino e in altre zone d’Italia. Recano l’impronta del Vignolese, fra l’altro, svariate strutture sportive di notevole rilevanza: lo Stadio Littoriale – oggi Stadio Dall’Ara – di Bologna, inaugurato due giorni dopo il suo 29° compleanno (da Mussolini in persona), un impianto che può essere considerato il primo stadio propriamente detto in Italia e che per diverso tempo funse da modello per la costruzione di tutti gli stadi della Penisola, oltre a essere uno degli impianti calcistici più grandi presenti all’epoca nell’intera Europa; il campo polisportivo dell’ippodromo di Ravenna (1928); l’ippodromo Arcoveggio di Bologna (1929); il nuovo Stadio Comunale – oggi Stadio Braglia – di Modena (1936-1938).<br>
@@ -111,9 +110,9 @@ Costanzini, che rimase sempre legatissimo al paese natale, avanzò propri proget
 Costanzini morì a Bologna il 2 aprile 1968.<br><br>
  
 
-Nell’immagine qui sotto, Costanzini nel suo studio (1933). Fonte: Giuseppe Leonardi, <i>L’Alpino</i>, in Aa.Vv., <i>36a Festa dei Ciliegi in Fiore (Vignola, 2 Aprile - 8 Maggio 2005)</i>, Vignola, Centro Studi Vignola, 2005, pp. 43-47: 44.</big></p><br><br>
+Nell’immagine qui sotto, Costanzini nel suo studio (1933). Fonte: Giuseppe Leonardi, <i>L’Alpino</i>, in Aa.Vv., <i>36a Festa dei Ciliegi in Fiore (Vignola, 2 Aprile - 8 Maggio 2005)</i>, Vignola, Centro Studi Vignola, 2005, pp. 43-47: 44.</p><br><br>
 <img src="img/celebri vignolesi/Costanzini/costanzini.jpg" width="550" height="620"><br><br><br>
-<p><strong><big><big><center>Vuoi saperne di più su Umberto Costanzini?<br>Allora, visita il suo <a href="Costanzini.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+<p><big><strong><center>Vuoi saperne di più su Umberto Costanzini?<br>Allora, visita il suo <a href="Costanzini.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</center></big></strong></p><br><br><br>
 
 <p><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>  
 </section>
