--- a/Belloi1.html
+++ b/Belloi1.html
@@ -47,7 +47,7 @@ Rimasto vedovo nel 1710, Belloi vestì l’abito talare (anche il padre, perduta
 
 Vignola lo ricorda con una targa posta sulla facciata della casa natale (che si trova nell’antica Via Maggiore, oggi Via Garibaldi) e con una strada a lui intitolata (accanto al Palazzo Contrari Boncompagni, detto più comunemente – ma in maniera impropria – Palazzo Barozzi).</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big><big>Casa natale di Belloi, situata nell’attuale Via Garibaldi (già Via Maggiore).</big></center><br>
+<p><center><big><big>Casa natale di Belloi, situata nell’attuale Via Garibaldi (già Via Maggiore).<br> Questa fotografia risale al 2021; nell’ottobre 2022 è stata rimossa la storica edicola all’ingresso del portico di Via Soli.</big></center><br>
 <img src="img/celebri vignolesi/Belloi/Casa natale.jpg" width="800" height="700"></p><br>
 <p><big><center>Frontespizio della prima edizione (postuma) del <i>De Vineolae moderniori statu chronica enarratio</i>,<br> l’opera più importante e celebre di Belloi, che la redasse dal 1704 al 1706.</big></center></p>
 <img src="img/celebri vignolesi/Belloi/Vineolae Chronica.jpg" width="400" height="650"><br><br>
