--- a/Novità.html
+++ b/Novità.html
@@ -42,6 +42,11 @@
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
 	
+<p><big><big><span style="text-decoration: underline;">03 novembre 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL PASSERO SOLINGO</strong></i>, la diciottesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Una cinciallegra, un passerotto ed una tortora, durante la caldura di agosto, si misero in viaggio verso un’eccelsa e lontana montagna, dove ciascuno di loro avrebbe trovato il proprio conto; l’una, insetti in alcuni piccoli laghetti circonvicini, e gli altri, il grano delle messi che tardi maturano colà, e precisamente in quella stagione. Stanchi e trafelati dal lungo battere delle ali, i tre pellegrini si fermarono a riposo sopra di una torretta diroccata che sorge sul culmine del monte, reliquia di antica rocca, che fu nido di predatori, e si disse castello di baroni.».<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 	
+	
 <p><big><big><span style="text-decoration: underline;">14 ottobre 2022</span></big></big></p><br><br>
 <p><big>Finora <i>Celebri Vignolesi</i> si è occupato pubblicamente (nel sito e nei social) solo di personaggi, opere, circostanze e citazioni del passato più o meno recente. Ciò non deve tuttavia far pensare a un disinteresse pregiudiziale nei riguardi del tempo presente. Ieri 13 ottobre 2022, per esempio, <i>Celebri Vignolesi</i> ha trascorso alcune ore nel laboratorio del <strong>maestro DOMENICO “PIPPO” SIMONINI</strong>. In vista del suo 70° compleanno, che cadrà il 18 ottobre, <i>Celebri Vignolesi</i> comincia da oggi a dedicare spazio alla figura, alla vita e alle opere di questo nostro illustre concittadino, valente pittore e incisore di rinomanza internazionale.<br>
 Nell’immagine qui sotto, Simonini durante una pausa dell’intervista filmata che pubblicheremo a breve.</big></p>
