--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -71,7 +71,7 @@
 <td><big><big><strong><a href="granellopolvere.html">18. Il granello di polvere</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="passero.html">19. Il passero solingo</a></strong></td>
+<td><big><big><strong><a href="passerosolingo.html">19. Il passero solingo</a></strong></td>
 <td><big><big><strong><a href="amorino.html">20. L’amorino e le sue sventure</a></strong></td></tr>
 
 <tr>
