--- a/Novità.html
+++ b/Novità.html
@@ -43,7 +43,7 @@
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">03 novembre 2022</span></big></big></p><br><br>
-<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL PASSERO SOLINGO</strong></i>, la diciottesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL PASSERO SOLINGO</strong></i>, la diciannovesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
 «Una cinciallegra, un passerotto ed una tortora, durante la caldura di agosto, si misero in viaggio verso un’eccelsa e lontana montagna, dove ciascuno di loro avrebbe trovato il proprio conto; l’una, insetti in alcuni piccoli laghetti circonvicini, e gli altri, il grano delle messi che tardi maturano colà, e precisamente in quella stagione. Stanchi e trafelati dal lungo battere delle ali, i tre pellegrini si fermarono a riposo sopra di una torretta diroccata che sorge sul culmine del monte, reliquia di antica rocca, che fu nido di predatori, e si disse castello di baroni.».<br>
 Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 	
 	
