--- a/dicembre.html
+++ b/dicembre.html
@@ -48,7 +48,13 @@ Nell’immagine qui sotto, lapide funeraria di Luca Antonio Tosi, cappella genti
 <center><img src="img/celebri vignolesi/Tosi/Tomba.jpg" width="550" height="600"></center><br><br><br> 
 <p><strong><big><big><center>Vuoi saperne di più su Luca Antonio Tosi?<br>Allora, visita il suo <a href="Tosi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
+<p><big><strong>7 dicembre 1880</strong>: nacque a Vignola <strong>MARIO PELLEGRINI</strong>, alto ufficiale della Marina Militare del Regno d’Italia ed eroe di guerra.<br><br>
+Cresciuto a Scandiano (Reggio Emilia), Mario Pellegrini studiò all’Accademia Navale di Livorno e, dopo aver partecipato con onore alla Guerra Italo-Turca (1911-1912), combatté nel Primo Conflitto Mondiale (1915-1918), dimostrando affidabilità e sprezzo del pericolo (ad esempio, il 14 maggio 1918 egli si rese protagonista dell’audace tentativo di forzamento del porto di Pola), tanto da essere decorato della Croce di Guerra, della Medaglia d’Argento e della Medaglia d’Oro al Valor Militare, e da essere promosso capitano di fregata per merito di guerra. Nel 1925 fu nominato capitano di vascello. Terminò la carriera come ammiraglio di Divisione della Riserva Navale.<br>  
+Pellegrini morì a Modena il 2 aprile 1954.<br><br>
 
+Nell’immagine sottostante, Mario Pellegrini in divisa. Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni, <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 12.</big></p><br><br>
+<center><img src="img/celebri vignolesi/Pellegrini Mario/divisa.jpg" width="530" height="600"></center><br><br><br> 
+<p><strong><big><big><center>Vuoi saperne di più su Mario Pellegrini?<br>Allora, visita il suo <a href="Pellegrini.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
 <p><big><strong>14 dicembre 1881</strong>: nacque a Vignola <strong>ALDO SANTI</strong>, ingegnere edile ed enigmografo.<br><br>
 Di professione ingegnere edile, nel corso della vita Aldo Santi coltivò con impegno svariati settori. A livello nazionale, egli è ancora ricordato come uno dei principali enigmografi del suo tempo e come uno dei padri dell’enigmistica moderna; utilizzò vari pseudonimi, primi fra tutti quelli di «Il Duca Borso» e «Soldatina». Nel 1950 fu vicepresidente – a fianco dell’amico <strong>Ugo Roli</strong> (1887-1959) – del Comitato Vignolese per le Onoranze a <strong>Lodovico Antonio Muratori</strong> (1672-1750) nel Secondo Centenario della Morte.<br>
