--- a/Pellegrini.html
+++ b/Pellegrini.html
@@ -59,11 +59,16 @@ Il suo paese natale gli ha intitolato la strada che mette in comunicazione diret
 <p><big><strong>VENDRAMEL, Angelo</strong>: <strong>Fedeli alla bandiera</strong>, <a href="https://www.marinai.it/comunica/eroi.pdf">www.marinai.it</a>, s.d. [2014?], pp. [10-11] (ultimo accesso, 4 novembre 2022).</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big><big>Biglietto autografo di Mario Pellegrini datato 19 febbraio 1937. Collezione privata.</big></big></center></p>
+<p><center><big><big>Pellegrini in uniforme.<br> Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni,<br> <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 12.</big></big></center></p>
+<img src="img/celebri vignolesi/Pellegrini Mario/divisa.jpg" width="530" height="600"><br><br>
+
+<p><center><big><big>Pellegrini in uniforme. Fonte: sito <a href="https://www.lavocedelmarinaio.com">La voce del marinaio</a>, <i>ad nomen</i>.</big></big></center></p>
+<img src="img/celebri vignolesi/Pellegrini Mario/Pellegrini marinaio.jpg" width="500" height="650"><br><br>
+<p><center><big><big>Disegno che interpreta l’eroismo dell’equipaggio del <i>Grillo</i>, agli ordini di Pellegrini, nelle acque del porto di Pola (14 maggio 1918).<br> Fonte: Angelo Vendramel, <a href="https://www.marinai.it/comunica/eroi.pdf"><i>Fedeli alla bandiera</i></a>, s.d. [2014?], pp. [10-11]: [11].</big></big></center></p>
+<img src="img/celebri vignolesi/Pellegrini Mario/disegno.jpg" width="650" height="430"><br><br>
+<p><center><big><big>Biglietto autografo di Pellegrini datato 19 febbraio 1937. Collezione privata.</big></big></center></p>
 <img src="img/celebri vignolesi/Pellegrini Mario/biglietto1.jpg" width="450" height="300"><br>
 <img src="img/celebri vignolesi/Pellegrini Mario/biglietto2.jpg" width="450" height="300"><br><br>
-<p><center><big><big>Mario Pellegrini in uniforme. Fonte: sito <a href="https://www.lavocedelmarinaio.com">La voce del marinaio</a>, <i>ad nomen</i>.</big></big></center></p>
-<img src="img/celebri vignolesi/Pellegrini Mario/Pellegrini marinaio.jpg" width="500" height="650"><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
