--- a/Selmi.html
+++ b/Selmi.html
@@ -89,9 +89,9 @@ Nelle segnalate pagine del presente numero di questa pubblicazione periodica, si
 <p><big><strong>CERRUTI, Luigi - IELUZZI, Gianmarco - TURCO, Francesca</strong>: <strong><i>Scienza, tecnologia e comunicazione iconografica: il caso dell’Enciclopedia chimica di Francesco Selmi</i></strong>, «Le Culture della Tecnica», N.S., n. 18 (2007), pp. 5-50.</big><p>
 	
 <p><big><strong>CIARDI, Marco</strong>: <strong><i>Selmi, Francesco</i></strong>, in <i>Dizionario Biografico degli Italiani</i>, vol. XCI, Roma, Istituto della Enciclopedia italiana, 2018, pp. 826-829.<br>
-Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/francesco-selmi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
+Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/francesco-selmi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione (ultimo accesso, 4 novembre 2022).</big></p>
 
-<p><big><a href="https://www.bibliomanie.it/?p=7465"><strong><i>Francesco Selmi. Scienze e lettere per unire l’Italia e fare gli Italiani. Intervista ad Achille Lodovisi</i></strong></a>, a cura di Piero Venturelli, «Bibliomanie. Letterature, storiografie, semiotiche», a. VI (2010), n.  1 [complessivamente, n. 20], senza paginazione.</big></p>
+<p><big><a href="https://www.bibliomanie.it/?p=7465"><strong><i>Francesco Selmi. Scienze e lettere per unire l’Italia e fare gli Italiani. Intervista ad Achille Lodovisi</i></strong></a>, a cura di Piero Venturelli, «Bibliomanie. Letterature, storiografie, semiotiche», a. VI (2010), n.  1 [complessivamente, n. 20], senza paginazione (ultimo accesso, 4 novembre 2022).</big></p>
 
 <p><big><strong>GUARESCHI, Icilio</strong>: <strong><i>Francesco Selmi e la sua opera scientifica</i></strong>, «Memorie della Reale Accademia delle Scienze di Torino», S. II, vol. LXII (1911), pp. 125-272.<br>
 Questo saggio circolò pure come estratto, con due numerazioni delle pagine, quella appena indicata e quella che va da p. 1 a p. 148: Torino, Bona, 1911.</big></p>
