--- a/Paradisi.html
+++ b/Paradisi.html
@@ -60,7 +60,7 @@ Del presente testo esiste una II edizione corretta e ampliata: <i>Elogio del con
 Dell’opera uscì solo questo primo volume.</big></p>
 
 <p><big><strong>DATTERO, Alessandra</strong>: <strong><i>Paradisi, Agostino</i></strong>, in <i>Dizionario Biografico degli Italiani</i>, vol. LXXXI, Roma, Istituto della Enciclopedia italiana, 2014, pp. 281-286.<br>
-Questa voce enciclopedica è disponibile anche nel sito web della <a href="http://www.treccani.it/enciclopedia/agostino-paradisi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
+Questa voce enciclopedica è disponibile anche nel sito web della <a href="http://www.treccani.it/enciclopedia/agostino-paradisi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione (ultimo accesso, 5 novembre 2022).</big></p>
 
 <p><big><strong><i>Elogio del Conte Agostino Paradisi del dott. Pietro Schedoni</i></strong>, Modena, Presso la Società Tipografica, 1789.<br>
 Il testo del presente volumetto venne poi migliorato e accresciuto due volte: II edizione, con lo stesso titolo, In Modena, Presso la Società Tipografica, 1793; III edizione, <i>Elogio del conte Agostino Paradisi scritto dal sig. Pietro Schedoni</i>, Modena, Per gli eredi Soliani, Tipografi Reali, 1819.</big></p>
@@ -71,15 +71,15 @@ Il testo del presente volumetto venne poi migliorato e accresciuto due volte: II
 
 <p><big><strong>VENTURELLI, Piero</strong>: <strong><i>Verso il Risorgimento. Agostino Paradisi</i> junior <i>(1736-1783): vita, opere e patriottismo culturale di un grande illuminista italiano</i></strong>, «Il Pensiero Mazziniano. Democrazia in azione», N.S., a. LXVIII (2013), fasc. 3 [ma: 2014], pp. 11-40.</big></p>
 
-<p><big><strong>ID.</strong>: <a href="https://www.bibliomanie.it/?p=1742"><strong><i>Agostino Paradisi</i> iunior <i>(1736-1783). Uomo di lettere e di teatro. Storico ed economista</i></strong></a>, «Bibliomanie. Letterature, storiografie, semiotiche», a. X (2014), n. 1 [complessivamente, n. 35], senza paginazione.</big></p>
+<p><big><strong>ID.</strong>: <a href="https://www.bibliomanie.it/?p=1742"><strong><i>Agostino Paradisi</i> iunior <i>(1736-1783). Uomo di lettere e di teatro. Storico ed economista</i></strong></a>, «Bibliomanie. Letterature, storiografie, semiotiche», a. X (2014), n. 1 [complessivamente, n. 35], senza paginazione (ultimo accesso, 5 novembre 2022).</big></p>
 
 <p><big><strong>ID.</strong>: <strong><i>Agostino Paradisi </i>il Giovane <i>e la polemica letteraria italo-francese del 1765</i></strong>, «Gente di Panaro. Rassegna di storia, “storie” e cultura locale – Valle del Panaro», a cura del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, n. 17 (2015), pp. 61-102.</big></p>
 
 <p><big><strong>ID.</strong>: <strong><i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i></strong>, «Montesquieu.it», n. 10 (2018), pp. 139-201.<br>
-Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/8989/8895">«Montesquieu.it»</a>, alle pp. 1-35.</big></p>
+Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/8989/8895">«Montesquieu.it»</a>, alle pp. 1-35 (ultimo accesso, 5 novembre 2022).</big></p>
 
 <p><big><strong>ID.</strong>: <strong><i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane</strong>, «Montesquieu.it», n. 13 (2021), pp. 167-193.<br>
-Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/12595/12403">«Montesquieu.it»</a>, alle pp. 1-15.</big></p>
+Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/12595/12403">«Montesquieu.it»</a>, alle pp. 1-15 (ultimo accesso, 5 novembre 2022).</big></p>
 
 <p><big><strong>VENTURI, Franco</strong>: <strong><i>Ritratto di Agostino Paradisi</i></strong>, «Rivista storica italiana», a. LXXIV (1962), fasc. 4, pp. 717-738.</big></p><br><br><br>
 
