--- a/Soli1.html
+++ b/Soli1.html
@@ -77,11 +77,13 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 
 <p><center><big><big>Adeodato Malatesta (1806-1891), ritratto postumo di Soli dipinto all’incirca nel 1840; olio su tela.<br> L’opera, con ogni probabilità ispirata all’<i>Autoritratto</i> che Soli eseguì non prima del 1805 e che si trova dal 1867 nel<br> Casino Tosi Bellucci di Vignola, è custodita presso l’Istituto d’Istruzione Superiore “Adolfo Venturi” di Modena<br> (questa scuola ha sede nei locali che appartennero all’Accademia di Belle Arti diretta per oltre sette lustri, fin quasi alla morte, da Soli;<br> dal 1839 alla scomparsa, direttore di tale Accademia fu il summenzionato Malatesta). Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/malatesta.jpg" width="400" height="620"><br><br><br>
-<p><center><big><big>Una fotografia recente della facciata della chiesa di San Pietro Apostolo a Carbognano. Fonte: google.com</big></big></center></p>
+<p><center><big><big>Una fotografia recente della facciata del Palazzo Barberini di Via delle Quattro Fontane a Roma.<br> All’interno di esso, Soli fu attivo come pittore e decoratore nel 1780. Fonte: google.com</big></big></center></p>
+<img src="img/celebri vignolesi/Soli Giuseppe Maria/barberini.jpg" width="670" height="430"><br><br><br>
+<p><center><big><big>Una fotografia recente della facciata della chiesa di San Pietro Apostolo a Carbognano. Soli fu architetto capo del cantiere di questo tempio negli ultimi due anni della sua permanenza a Roma. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/chiesa.jpg" width="460" height="600"><br><br><br>
 	<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame) che<br> Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/porta.jpg" width="650" height="450"><br><br><br>
-<p><big><big><center>Una fotografia recente del Casino Tosi Bellucci (già Bellucci) a Vignola.</center></big></big></p>
+<p><big><big><center>Una fotografia recente della facciata del Casino Tosi Bellucci (già Bellucci) a Vignola.</center></big></big></p>
 <img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
 <p><center><big><big>Una fotografia recente della facciata verso Piazza San Marco delle Procuratie Nuovissime di Venezia. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/procuratie.jpg"><br><br><br>
