--- a/Soli1.html
+++ b/Soli1.html
@@ -79,7 +79,7 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/malatesta.jpg" width="400" height="620"><br><br><br>
 <p><center><big><big>Una fotografia recente della facciata del Palazzo Barberini di Via delle Quattro Fontane a Roma.<br> All’interno di esso, Soli fu attivo come pittore e decoratore nel 1780. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/barberini.jpg" width="670" height="430"><br><br><br>
-<p><center><big><big>Una fotografia recente della facciata della chiesa di San Pietro Apostolo a Carbognano. Soli fu architetto capo del cantiere di questo tempio negli ultimi due anni della sua permanenza a Roma. Fonte: google.com</big></big></center></p>
+<p><center><big><big>Una fotografia recente della facciata della chiesa di San Pietro Apostolo a Carbognano.<br> Soli fu architetto capo del cantiere di questo tempio negli ultimi due anni della sua permanenza a Roma. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/chiesa.jpg" width="460" height="600"><br><br><br>
 	<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame) che<br> Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/porta.jpg" width="650" height="450"><br><br><br>
