--- a/giugno.html
+++ b/giugno.html
@@ -123,7 +123,7 @@ Nelle immagini sottostanti, la casa natale di Pietro Antonio Bernardoni e la lap
 <img src="img/celebri vignolesi/Bernardoni/casa.jpg" width="750" height="550"><br><br><br><br>
 <img src="img/celebri vignolesi/Bernardoni/lapide.jpg" width="650" height="450"><br><br><br>
 <p><big><strong><center>Vuoi saperne di più su Pietro Antonio Bernardoni?<br>Allora, visita il suo <a href="Bernardoni.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
-<p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
+<p><strong><a href="Anniversari.html">Indice dei mesi</a></strong></center></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
