--- a/ottobre.html
+++ b/ottobre.html
@@ -80,7 +80,7 @@ Nato a Vignola il 23 giugno 1747 in una famiglia di agricoltori, Giuseppe Maria 
 Nel 1821 stese un progetto per ingrandire la chiesa parrocchiale di Vignola.<br><br>
 Nell’immagine sottostante, una fotografia recente della facciata del Casino Tosi Bellucci, edificio progettato da Giuseppe Maria Soli.</big></p><br><br>
 <img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
-<p><strong><big><center>Vuoi saperne di più su Giuseppe Maria Soli?<br>Allora, visita il suo <a href="Soli Giuseppe Maria.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Giuseppe Maria Soli?<br>Allora, visita il suo <a href="Soli Giuseppe Maria.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
 <p><big><strong>21 ottobre 1672</strong>: venne alla luce a Vignola lo storico, erudito, letterato ed ecclesiastico <strong>LODOVICO ANTONIO MURATORI</strong>.<br><br>
   Lodovico Antonio Muratori si laureò <i>in utroque iure</i> all’Università di Modena. Assai presto, però, egli scelse di dedicarsi in prevalenza agli studi storici, il che gli consentì di pervenire, nell’arco di oltre mezzo secolo di operosa vita intellettuale, a risultati di considerevolissima importanza, pressoché ineguagliati nel suo tempo.<br>
