--- a/amorino.html
+++ b/amorino.html
@@ -47,10 +47,10 @@ Nel giorno seguente, nella stanza verginale della futura sposa il ravvivato amor
 <p><big>* Nell’originale, figura qui in apice il numero 4, che rimanda al testo della nota che apre Note, l’elenco delle note, verosimilmente tutte di pugno dell’Autore stesso, inserito subito dopo la fine dell’ultima favola della raccolta e subito prima dell’<i>Indice</i>. Ecco il testo di tale nota: «L’amorino. <i>È molto conosciuto col nome di</i> mignonet <i>e di</i> resedà.»<br>
  ** Nell’originale, figura qui in apice il numero 5, che rimanda al testo della nota che apre Note, l’elenco delle note, verosimilmente tutte di pugno dell’Autore stesso, inserito subito dopo la fine dell’ultima favola della raccolta e subito prima dell’Indice. Ecco il testo di tale nota: «<i>Le piante trasudano dalle radici un umore escrementizio che vuolsi sia nocivo alle altre piante</i>.»<br>
   *** Nell’originale, «quel acre».<br> 
-  **** Nell’originale, c’è una virgola.
-  ***** Nell’originale, la virgola risulta in una posizione diversa: «compassionevoli, e poiché».
-  ****** Nell’originale, le affermazioni dell’insetto non sono racchiuse tra caporali di apertura e quelli di chiusura; inoltre, si preferisce «tu» a «Tu».    
-  ******* Nell’originale, dopo «rispose» c’è una virgola e si scrive «amici».
+  **** Nell’originale, c’è una virgola.<br> 
+  ***** Nell’originale, la virgola risulta in una posizione diversa: «compassionevoli, e poiché».<br> 
+  ****** Nell’originale, le affermazioni dell’insetto non sono racchiuse tra caporali di apertura e quelli di chiusura; inoltre, si preferisce «tu» a «Tu».<br>     
+  ******* Nell’originale, dopo «rispose» c’è una virgola e si scrive «amici».<br> 
   ******** Nell’originale, manca la virgola.</big></p><br><br><br>
 
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
