--- a/Soli2.html
+++ b/Soli2.html
@@ -37,9 +37,9 @@
 	
 <p><center><big><big>Soli. Fonte: <i>Ivo Soli</i>, presentazione di Renzo Biasion, a cura della Cassa di Risparmio di Vignola,<br> Bologna, Arti Grafiche Tamari, 1979, senza paginazione.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/Soli.jpg" width="430" height="600"><br><br>
-<p><center><big><big><i>Nudo femminile seduto</i> (1937-1940), bronzo. Vignola, Piazza Giardino d’Europa.</big></big></center><br>
+<p><center><big><big><i>Nudo femminile seduto</i> (1937-1940), bronzo. Dal 1996 in poi, Vignola, Piazza Giardino d’Europa.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/donnanera.jpg" width="500" height="600"><br><br>
-<p><center><big><big><i>Fanciulla accovacciata</i> (1945-1948), bronzo. Vignola, Via Selmi,<br> davanti alla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750).</big></big></center><br>
+<p><center><big><big><i>Fanciulla accovacciata</i> (1945-1948), bronzo. Dal 1994 in poi, Vignola, Via Selmi,<br> davanti alla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750).</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="450" height="610"><br><br>
 <p><center><big><big>Soli intento a modellare il monumento a Carlo Porta, inaugurato nel 1966 al Verziere di Milano. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="430" height="600"><br><br>
