--- a/luglio.html
+++ b/luglio.html
@@ -54,7 +54,7 @@ Venuto alla luce da genitori di umili condizioni, Ivo Soli mostrò una precoce q
 Durante la vita, Soli partecipò a mostre e a esposizioni nazionali e internazionali d’arte. Sue opere sono presenti in diverse città italiane.<br>
 L’artista si spense a Vignola il 10 dicembre 1976.<br>
 Per ricordare Soli, suo figlio adottivo, Vignola gli ha intitolato la piazzetta che si trova davanti all’edificio che ospita – fra l’altro – la Scuola Primaria “Jacopo Barozzi”.<br><br>
-Nell’immagine sottostante, una delle sculture di Ivo Soli presenti a Vignola, la <i>Fanciulla accovacciata</i>, opera eseguita tra il 1945 e il 1948. Oggi è collocata a poca distanza dalla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750), in Via Selmi.</big></p><br><br><br>
+Nell’immagine sottostante, una delle sculture di Ivo Soli presenti a Vignola, la <i>Fanciulla accovacciata</i>, opera eseguita tra il 1945 e il 1948. Dal 1994 è collocata a poca distanza dalla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750), in Via Selmi.</big></p><br><br><br>
 <img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="530" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Ivo Soli?<br>Allora, visita il suo <a href="Soli2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
